2006-08-01    <tino@firebird.03.softkill.net>

	* longmath.h: added

	* xml.h: added

2006-07-30    <tino@firebird.03.softkill.net>

	* Makefile.tino.dist: VERSIONFILE and VERSIONNAME added

	* Makefile.proto (VERSIONFILE, VERSIONNAME): Rule for versioning
	changed, such that I can create names not based on $(PROG1)

2006-07-26    <tino@firebird.03.softkill.net>

	* file.h (tino_file_notsocket, tino_file_notfile): added

2006-07-25    <tino@firebird.03.softkill.net>

	* buf_line.h (tino_buf_line_read): fixed
	(tino_buf_line_scan): comment corrected

	* getopt.h (tino_getopt_var_set_arg): added extended character
	support in getopt.  If a 'character' is longer than 0 character
	such like \n or a number (>=10, 0oct, 0xHEX) it is calculated from
	this sequence.

2006-07-23    <tino@firebird.03.softkill.net>

	* filetool.h (tino_file_pathchar): added
	(tino_file_backupname): As I found some DoS possibility added a
	desparate mode.

2006-07-22    <tino@firebird.03.softkill.net>

	* filetool.h (tino_file_skip_root, tino_file_skip_root_const):
	added

	* file.h (tino_file_mkdir): added

	* ex.h (tino_verr): added
	(tino_err): changed to tino_verr
	(tino_verror): flushing added, such that errors are in sequence.
	(tino_verror_std): added
	(tino_verror): now uses tino_verror_std

	* getopt.h (tino_getopt_tab): '\n' as second natural delimiter
	(tino_getopt): Multiline usage will be printer between Version and
	Options.

	* filetool.h (tino_file_gluebuffer): added
	(tino_file_glue_path, tino_file_dirname, tino_file_filename): now
	uses tino_file_gluebuffer
	(tino_file_dirname, tino_file_filename): bugs removed by
	tino_file_gluebuffer
	(tino_file_backupname): added

	* sockbuf.h (tino_sockbuf_get, tino_sockbuf_fd): added

	* file.h (tino_file_blocking, tino_file_nonblock) 
	(tino_file_block): added

2006-07-21    <tino@firebird.03.softkill.net>

	* setuptino.sh: Thou shalt test thee! sigh .. the checkout process
	now works as expected.
